[gd_scene load_steps=2 format=3 uid="uid://blfwtoavfr5ry"]

[ext_resource type="Script" path="res://scripts/components/HitBox2D.gd" id="1_8kesw"]

[node name="HitBox2D" type="Area2D"]
script = ExtResource("1_8kesw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="GraceTimer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="GraceTimer" to="." method="_on_grace_timer_timeout"]
